--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "@vercel/analytics": "^1.1.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^6.5.1",
